--- a/CrateUI-master/plugin.yml
+++ b/CrateUI-master/plugin.yml
@@ -1,13 +1,13 @@
 name: CrateUI
 main: CrateUI\Main
-api: [3.0.0-ALPHA9, 3.0.0-ALPHA10]
+api: [3.0.0-ALPHA10, 3.0.0-ALPHA11]
 version: 1.0
 author: GeoZDev
 
 commands:
- crate:
-  description: "Apri la GUI delle crates! by GeoZDev"
+ 뽑기하기:
+  description: "뽑기UI"
 
 permissions:
  crate.key:
-  description: "get key permission"
+  description: ""
